--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,6 +144,7 @@
                 android:id="@+id/sound_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="70dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7D36FF"
                 android:baselineAlignBottom="false"
@@ -154,6 +155,7 @@
                 app:layout_constraintHorizontal_bias="0.462"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.515"
                 app:maxImageSize="40dp"
                 app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
                 app:tint="@android:color/white" />
@@ -162,32 +164,21 @@
                 android:id="@+id/share_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="70dp"
                 android:layout_weight="1"
                 android:backgroundTint="#7D36FF"
                 android:clickable="true"
                 app:borderWidth="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/info_fab"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/sound_fab"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.515"
                 app:maxImageSize="40dp"
                 app:srcCompat="?attr/actionModeShareDrawable"
                 app:tint="@android:color/white" />
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/info_fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#7D36FF"
-                android:clickable="true"
-                app:borderWidth="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/share_fab"
-                app:layout_constraintTop_toTopOf="parent"
-                app:maxImageSize="30dp"
-                app:srcCompat="@android:drawable/ic_dialog_info"
-                app:tint="@color/white" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
