--- a/app/src/main/res/layout-hdpi-800x480/activity_main.xml
+++ b/app/src/main/res/layout-hdpi-800x480/activity_main.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg"
-    tools:context=".MainActivity">
+    android:background="@color/bg">
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="237dp"
-        android:layout_height="140dp"
+        android:layout_width="232dp"
+        android:layout_height="90dp"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="50dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,13 +20,13 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="146dp"
+            android:layout_width="226dp"
+            android:layout_height="90dp"
             android:layout_weight="1"
             android:text="@string/title"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="60sp"
+            android:textSize="40sp"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -59,8 +58,7 @@
             android:hint="@string/cash_text"
             android:inputType="number"
             android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"
-            tools:ignore="EditableContentDescCheck" />
+            android:textColorHint="#FFFFFF" />
     </LinearLayout>
 
     <LinearLayout
@@ -92,8 +90,7 @@
             android:hint="@string/people_text"
             android:inputType="number"
             android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"
-            tools:ignore="SpeakableTextPresentCheck,EditableContentDescCheck" />
+            android:textColorHint="#FFFFFF" />
 
     </LinearLayout>
 
@@ -191,4 +188,18 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="134dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="15dp"
+        android:text="Nexus S"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
